[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.4",
    "langchain>=0.3.18",
    "openai>=1.61.1",
    "langchain-google-genai>=2.0.9",
    "langchain-core>=0.3.34",
    "langchain-community>=0.3.17",
]
